--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.6",
     "hamburger-react": "^2.5.1",
@@ -26,7 +29,7 @@
     "react-multi-date-picker": "^4.5.1",
     "sass": "^1.77.2",
     "svgo": "^3.3.2",
-    "swiper": "^11.1.4",
+    "swiper": "^10.3.1",
     "usehooks-ts": "^3.1.0",
     "yup": "^1.4.0"
   },
